# todoist-to-notes

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGES.md  LICENSE  Makefile  README.md  pyproject.toml  setup.cfg
src/: __init__.py  cli.py  core.py  obsidian_exporter.py  scheduler.py  todoist_client.py
src/todoist_to_notes/: __about__.py  __init__.py  cli.py  obsidian_exporter.py  todoist_client.py
tests/: __init__.py  test_cli.py  test_core.py  test_obsidian_exporter.py  test_scheduler.py  test_todoist_client.py
